--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
 
-  <h1>test</h1>
+  <h1>page test</h1>
 
-  
 
-<script src="script.js"></script>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
