--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
 
-  <h1>page test</h1>
+<h1 class="title">page test</h1>
 
+<p>hihihihihihiihihihihih</p>
+<p>hihihihihihiihihihihih</p>
+<p>hihihihihihiihihihihih</p>
+<p>hihihihihihiihihihihih</p>
 
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
-
 </html>
