--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>modern javascript tutorials</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-
+  <title>Jack O Lantern</title>
+  
+  <Link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bungee">
 </head>
+  
+<body> 
+    <div class="lantern">
+        <div class="face">
+            <div class="eyes"></div>
+            <div class="mouth"></div>
+        </div>
+    </div>
 
-<body>
-
-<h1 class="title">page test</h1>
-
-<p>hihihihihihiihihihihih</p>
-<p>hihihihihihiihihihihih</p>
-<p>hihihihihihiihihihihih</p>
-<p>hihihihihihiihihihihih</p>
-
-<script src="script.js"></script>
+<h1 class="title">
+    happy
+    <span>halloween</span>
+    <div class="date">Oct 31 2023</div>
+</h1>
 </body>
 </html>
